force-app/main/default/objects/Case_SLA__c/Case_SLA__c.object-meta.xml
<CustomObject>
    <label>Case_SLA</label>
    <nameField>
        <label>Case_SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case_SLAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>