force-app/main/default/objects/Case_SLA__c/fields/Data_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio__c</fullName>
    <label>Data_Inicio</label>
    <type>DateTime</type>
</CustomField>