force-app/main/default/objects/Case_SLA__c/fields/Escalonado__c.field-meta.xml
<CustomField>
    <fullName>Escalonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalonado</label>
    <type>Checkbox</type>
</CustomField>