force-app/main/default/objects/Case_SLA__c/fields/Prazo_Resolucao__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Resolucao__c</fullName>
    <label>Prazo_Resolucao</label>
    <type>DateTime</type>
</CustomField>