force-app/main/default/objects/Case_SLA__c/fields/Prazo_Resposta__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Resposta__c</fullName>
    <label>Prazo_Resposta</label>
    <type>DateTime</type>
</CustomField>