force-app/main/default/objects/Case_SLA__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA</label>
    <referenceTo>SLA__c</referenceTo>
    <relationshipLabel>Case_SLAs</relationshipLabel>
    <relationshipName>Case_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>