force-app/main/default/objects/Case_SLA__c/fields/Status_SLA__c.field-meta.xml
<CustomField>
    <fullName>Status_SLA__c</fullName>
    <label>Status_SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em dia</fullName>
            </value>
            <value>
                <fullName>Em risco</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Renegociado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>